# snooker

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  spam_phrases.rs
